--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="image">
-        <img src="./images/kt logo.png" alt="logo">
+        <img src="../images/kt logo.png" alt="logo">
         </div>
 
         <div class="navbar">
@@ -36,13 +36,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/home.png" class="d-block w-100" alt="...">
+          <img src="../images/home.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./images/houseboat.jpg" class="d-block w-100" alt="...">
+          <img src="../images/houseboat.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./images/munnar-kerala-photos.jpg" class="d-block w-100" alt="...">
+          <img src="../images/munnar-kerala-photos.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
