--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./images/home1.jpg" class="d-block w-100" alt="...">
+                  <img src="../images/home1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/home2.jpg" class="d-block w-100" alt="...">
+                  <img src="../images/home2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/home3.jpg" class="d-block w-100" alt="...">
+                  <img src="../images/home3.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/home4.jpg" class="d-block w-100" alt="...">
+                    <img src="../images/home4.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/home5.jpg" class="d-block w-100" alt="...">
+                    <img src="../images/home5.jpg" class="d-block w-100" alt="...">
                 </div> 
                 
               </div>
