--- a/districtsname.html
+++ b/districtsname.html
@@ -123,7 +123,7 @@ a{
                 </div>
             </div>
             <div class="box">
-                <img src="./images/Alappuzha.jpg" alt="">
+                <img src="../images/Alappuzha.jpg" alt="">
                 <div class="content">
                     <h3>ALAPPUZHA </h3>
                     <p>Nicknamed as the 'Venice of the East',district is of immense natural beauty.Embraced by the Arabian Sea and a network of lakes, lagoons and freshwater rivers criss-crossing it, this backwater country is home toa vibrant animal and avian life</p>
