--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../home1.jpg" class="d-block w-100" alt="...">
+                  <img src="./home1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                   <img src="../images/home2.jpg" class="d-block w-100" alt="...">
