--- a/districtsname.html
+++ b/districtsname.html
@@ -95,7 +95,7 @@ a{
                     <p> 
                         A long shoreline with internationally renowned beaches, historic monuments, 
                         backwater stretches and a rich cultural heritage make district beautiful </p>
-                    <a href="./DISTRICT/tvm.html" target="_blank" class="btn">See more</a>
+                    <a href="tvm.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -103,7 +103,7 @@ a{
                 <div class="content">
                     <h3>KOLLAM</h3>
                     <p>This is home to the celebrated Ashtamudi Lake, making it a gateway to the breath-taking backwaters of Kerala.The largest bird sculpture of Asia is sitauted in this district.</p>
-                    <a href="./DISTRICT/klm.html" target="_blank" class="btn">See more</a>
+                    <a href="klm.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -111,7 +111,7 @@ a{
                 <div class="content">
                     <h3>PATHANAMTHITTA</h3>
                     <p>A hilly province of pristine splendour.Pathanamthitta has been dubbed a Heritage Village as it attracts visitors from all over the world for its spectacular water fiestas, religious shrines and cultural training centres.</p>
-                    <a href="./DISTRICT/ptm.html" target="_blank" class="btn">See more</a>
+                    <a href="ptm.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -119,7 +119,7 @@ a{
                 <div class="content">
                     <h3>KOTTAYAM </h3>
                     <p>Kottayam district is famous for its rich heritage and literary tradition.Cradled by the backwaters and the Western Ghats, it is epitomised by its stretches of vast greenery, paddy fields and huge rubber plantations</p>
-                    <a href="./DISTRICT/ktm.html" target="_blank" class="btn">See more</a>
+                    <a href="ktm.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -127,7 +127,7 @@ a{
                 <div class="content">
                     <h3>ALAPPUZHA </h3>
                     <p>Nicknamed as the 'Venice of the East',district is of immense natural beauty.Embraced by the Arabian Sea and a network of lakes, lagoons and freshwater rivers criss-crossing it, this backwater country is home toa vibrant animal and avian life</p>
-                    <a href="./DISTRICT/index1.html" target="_blank"" class="btn">See more</a>
+                    <a href="index1.html" target="_blank"" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -135,7 +135,7 @@ a{
                 <div class="content">
                     <h3>IDUKKI</h3>
                     <p>Blessed with a wide range of trekking trail.The place is also renowned for its exotic flora and fauna and one can come across many rare species while visiting Idukki.</p>
-                    <a href="./DISTRICT/idk.html" target="_blank"" class="btn">See more</a>
+                    <a href="idk.html" target="_blank"" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -143,7 +143,7 @@ a{
                 <div class="content">
                     <h3>ERNAKULAM</h3>
                     <p>Ernakulam is a sprawling metropolis that beautifully combines its natural wonders with providing a base for a majority of the State’s business enterprises. Flanked by the Arabian sea, it is easily among the most visited locations in Kerala</p>
-                    <a href="./DISTRICT/eklm.html" target="_blank" class="btn">See more</a>
+                    <a href="eklm.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -151,7 +151,7 @@ a{
                 <div class="content">
                     <h3>THRISSUR</h3>
                     <p>The cultural capital of Kerala, the Poorams or temple festivals in Thrissur draw in thousands of people every single year.It also houses the largest waterfall of Kerala.</p>
-                    <a href="./DISTRICT/trsr.html" target="_blank" class="btn">See more</a>
+                    <a href="trsr.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -160,7 +160,7 @@ a{
                     <h3>PALAKKAD</h3>
                     <p>Palakkad is a vast stretch of fertile plains interspersed with hills, rivers, mountain streams and forests.
                         Known for its unique architecture, music and the chariot festival Kalpathy has the distinction of being the only Heritage Village in Kerala.  </p>
-                    <a href="./DISTRICT/pkd.html" target="_blank" class="btn">See more</a>
+                    <a href="pkd.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -168,7 +168,7 @@ a{
                 <div class="content">
                     <h3>MALAPPURAM</h3>
                     <p>Malappuram literally means a land atop hills and the region is enriched by three great rivers flowing through it-the Chaliyar,Kadalundi and the Bharathapuzha.</p>
-                    <a href="./DISTRICT/mlpm.html" target="_blank" class="btn">See more</a>
+                    <a href="mlpm.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -176,7 +176,7 @@ a{
                 <div class="content">
                     <h3>KOZHIKODE</h3>
                     <p>The presence of the lanes, bazaars and business hubs of Kozhikode. Lush green countryside, serene beaches, historic sites, wildlife sanctuaries, rivers and hills make Kozhikode a popular destination.</p>
-                    <a href="./DISTRICT/kzhd.html" target="_blank" class="btn">See more</a>
+                    <a href="kzhd.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -184,7 +184,7 @@ a{
                 <div class="content">
                     <h3>WAYANAD</h3>
                     <p> Teeming with rare flora and fauna, it is considered among the most picturesque locations in Kerala. It is host to a large variety of endemic species. One is surrounded by mist-covered peaks and lush greenery on all sides.</p>
-                    <a href="./DISTRICT/wynd.html" target="_blank" class="btn">See more</a>
+                    <a href="wynd.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -192,7 +192,7 @@ a{
                 <div class="content">
                     <h3>KANNUR</h3>
                     <p> Kannur has,since time immemorial,been hailed as an influential sea port.It has a plethora of forts, temples, beaches and wildlife sanctuaries that regularly attract visitors. </p>
-                    <a href="./DISTRICT/knr.html" target="_blank" class="btn">See more</a>
+                    <a href="knr.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
@@ -200,7 +200,7 @@ a{
                 <div class="content">
                     <h3>KASARGOD</h3>
                     <p>The northernmost district of Kerala, Kasaragod is renowned for its hills, forts and water bodies.The place is also popular for its ancient temples and rich biodiversity.</p>
-                    <a href="./DISTRICT/ksdg.html" target="_blank" class="btn">See more</a>
+                    <a href="ksdg.html" target="_blank" class="btn">See more</a>
                 </div>
             </div>
     
