--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../home1.jpg" class="d-block w-100" alt="...">
+                  <img src="./home1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="../home2.jpg" class="d-block w-100" alt="...">
+                  <img src="./home2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="../home3.jpg" class="d-block w-100" alt="...">
+                  <img src="./home3.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../home4.jpg" class="d-block w-100" alt="...">
+                    <img src="./home4.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../home5.jpg" class="d-block w-100" alt="...">
+                    <img src="./home5.jpg" class="d-block w-100" alt="...">
                 </div> 
                 
               </div>
