--- a/districtsname.html
+++ b/districtsname.html
@@ -127,7 +127,7 @@ a{
                 <div class="content">
                     <h3>ALAPPUZHA </h3>
                     <p>Nicknamed as the 'Venice of the East',district is of immense natural beauty.Embraced by the Arabian Sea and a network of lakes, lagoons and freshwater rivers criss-crossing it, this backwater country is home toa vibrant animal and avian life</p>
-                    <a href="index1.html" target="_blank"" class="btn">See more</a>
+                    <a href="alpzha.html" target="_blank"" class="btn">See more</a>
                 </div>
             </div>
             <div class="box">
