--- a/kerala.html
+++ b/kerala.html
@@ -12,7 +12,7 @@
     .container{
         width: 100%;
         height: 115vh;
-        background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(./images/home.png);
+        background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../home.png);
         background-position: center;
         background-size: cover;
     }
@@ -68,17 +68,17 @@
     }
 
 .card1{
-    background-image:url(./images/card1backwater.jpg);
+    background-image:url(../card1backwater.jpg);
 }
 .card2{
-    background-image: url(./images/card2\ Mahe-Beach.jpg);
+    background-image: url(../card2 Mahe-Beach.jpg);
 }
 .card3{
-    background-image: url(./images/card\ 3Munnar_001_580310.jpg);
+    background-image: url(../card\ 3Munnar_001_580310.jpg);
 
 }
 .card4{
-    background-image: url(./images/card4waterfall.jpg);
+    background-image: url(../card4waterfall.jpg);
 }
 h5{
     font-size: large;
