--- a/signup.html
+++ b/signup.html
@@ -92,7 +92,7 @@ button:hover {
 <!-- <label for="repeatPassword"><b>Repeat Password</b></label> -->
 <input type="password" placeholder="Confirm Password" name="repeatPassword" id="confirmpwd"
 required>
-<label>
+<br><label>
 <input type="checkbox" checked="checked" name="remember"> Remember me
 </label>
 <p>By creating an account you agree to our <a href="#"
